fixed arrow SVG scaling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ p strong a:hover {
     display: none;
     height: 0;
   }
-  svg {
+  .contact-svg {
     padding-top: 40px;
     width: 40px;
     height: 40px;
